@@ -1,3 +1,9 @@
+2013-09-19         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.c (parse_bracket_exp): Use code from grep to keep things within
+	range (updates change of 2013-09-08). Fix whitespace in one of the
+	gawk-only additions.
+
 2013-09-13         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Fix use of NF after it's extended, e.g. see test/nfloop.awk.
